1つ目の記事を大まかに書いた

--- a/article/bqml_1.ipynb
+++ b/article/bqml_1.ipynb
@@ -18,7 +18,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO"
+    "Big Queryでデータセットのロード、前処理、特徴量生成、モデルの学習、評価を行う方法についての記事です  \n",
+    "jupyter上で実行することで、よりシームレスにbqに接続し、クエリを実行すると共に、データを可視化し、モデルのブラッシュアップを行っていきます"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "まとめてると、割と長くなったので、この記事の中では、\n",
+    "- jupyter上でマジックコマンドを実行する方法\n",
+    "- bq上にあるdatasetの概要の確認方法\n",
+    "\n",
+    "について説明します  \n",
+    "\n",
+    "特徴量生成、MLモデルの作成についてはまた別の記事にまとめます  \n",
+    "なお、jupyterや機械学習自体の説明については基本しないです"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# big queryのメリット"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 大量のdataからでも高速に集約し、\n",
+    "TODO "
    ]
   },
   {
@@ -32,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "例としてなにか良いものがないか、`bigquery-public-data` から探してみると、`google_analytics_sample`という、`GA`のトランザクションのdatasetがあったので、これで、クリックする確率を予測してみようと思います"
+    "例としてなにか良いものがないか、`bigquery-public-data` から探してみます"
    ]
   },
   {
@@ -42,6 +72,13 @@
    "outputs": [],
    "source": [
     "!bq ls --project_id bigquery-public-data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`google_analytics_sample`という、`GA`のトランザクションの`dataset`があったので、これで、ユーザーが特定の商品をクリックする確率(isClick)を予測してみようと思います"
    ]
   },
   {
@@ -64,21 +101,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bq --locaton=eu mk google-analytics"
+    "!bq mk --location=US google_analytics"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "datasetを作成します。今回は `bigquery-public-data` を使う都合上、locationを `EU`に指定します"
+    "datasetを作成します。データを読み込んだりする都合上今回使用する `bigquery-public-data.google_analytics_sample` と同じregionにする必要があるため、locationを `US`に指定します(デフォルトでもUSになりますが、一応指定します)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## magic command"
+    "## magic commandの認証"
    ]
   },
   {
@@ -98,24 +135,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tokenのファイルを読み込ませます  \n",
+    "詳細については[こちら](https://google-auth.readthedocs.io/en/latest/user-guide.html#obtaining-credentials)のドキュメントをご覧ください"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from google.cloud.bigquery import magics\n",
     "from google.oauth2 import service_account\n",
     "credentials = (service_account.Credentials.from_service_account_file('/Users/hiroaki/Downloads/scalable-data-science-b045d3ddcc4c.json'))\n",
-    "magics.context.credentials = credentials\n"
+    "magics.context.credentials = credentials"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "PROJECT = 'scalable-data-science'"
+    "これで準備は完了です"
    ]
   },
   {
@@ -126,8 +169,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "まず、magic commandを使えるようにするために読み込みます"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -307,20 +357,20 @@
        "1   None          Social  Not Socially Engaged  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head(2)"
+    "data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "基本は、これだけで良いと思いますが、より詳細なオプションは[公式ドキュメント](https://google-cloud.readthedocs.io/en/latest/bigquery/generated/google.cloud.bigquery.magics.html)を参考にしてください。"
+    "基本はこれだけで良いと思いますが、より詳細なオプションは[公式ドキュメント](https://google-cloud.readthedocs.io/en/latest/bigquery/generated/google.cloud.bigquery.magics.html)を参考にしてください"
    ]
   },
   {
@@ -331,8 +381,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "columnの名前と型を確認します"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +549,7 @@
        "14                                             STRING  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,14 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 学習に使用する変数のみを取り出す"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "このtableに入っている変数を"
+    "`STRUCT`の中身がよくわからないので、"
    ]
   },
   {
@@ -530,15 +580,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "で確認して見ます  \n",
-    "全部使うと、流石に面倒なので、予測のための説明変数は"
+    "で確認してみます  \n",
+    "目的変数である`isClick` はかなり入れ込んでるので、少し面倒そうですね"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO   \n",
+    "予測のための説明変数は"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "hits.hour\n",
+    "hits.product.productPrice\n",
+    "device.isMObile\n",
+    "device.browser\n",
+    "geoNetwork.country\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "としましょう  \n",
     "細かいcolumnの説明は[こちら](https://support.google.com/analytics/answer/3437719?hl=ja)にあるので、気になる人は御覧ください"
    ]
@@ -547,19 +617,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "目的変数である`isClick` はかなり入れ込んでるので、少し面倒そうですね"
+    "# 学習に使用する変数のみを取り出す"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 必要な変数が入っているcolumnのみを取り出す"
+    "下記のクエリで必要なもののみを取り出します"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -583,9 +653,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>fullVisitorId</th>\n",
        "      <th>hour</th>\n",
        "      <th>browser</th>\n",
+       "      <th>isMobile</th>\n",
+       "      <th>country</th>\n",
        "      <th>productPrice</th>\n",
        "      <th>isClick</th>\n",
        "    </tr>\n",
@@ -593,81 +664,46 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7194065619159478122</td>\n",
        "      <td>23</td>\n",
        "      <td>Internet Explorer</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
        "      <td>25000000</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7194065619159478122</td>\n",
        "      <td>23</td>\n",
        "      <td>Internet Explorer</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
        "      <td>50000000</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7194065619159478122</td>\n",
        "      <td>23</td>\n",
        "      <td>Internet Explorer</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
        "      <td>100000000</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7194065619159478122</td>\n",
        "      <td>23</td>\n",
        "      <td>Internet Explorer</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
        "      <td>250000000</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8159312408158297118</td>\n",
        "      <td>13</td>\n",
        "      <td>Chrome</td>\n",
-       "      <td>16990000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>8159312408158297118</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Chrome</td>\n",
-       "      <td>16990000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>8159312408158297118</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Chrome</td>\n",
-       "      <td>16990000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8159312408158297118</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Chrome</td>\n",
-       "      <td>16990000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8159312408158297118</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Chrome</td>\n",
-       "      <td>16990000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>8159312408158297118</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Chrome</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
        "      <td>16990000</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
@@ -676,20 +712,15 @@
        "</div>"
       ],
       "text/plain": [
-       "         fullVisitorId  hour            browser  productPrice isClick\n",
-       "0  7194065619159478122    23  Internet Explorer      25000000    None\n",
-       "1  7194065619159478122    23  Internet Explorer      50000000    None\n",
-       "2  7194065619159478122    23  Internet Explorer     100000000    None\n",
-       "3  7194065619159478122    23  Internet Explorer     250000000    None\n",
-       "4  8159312408158297118    13             Chrome      16990000    None\n",
-       "5  8159312408158297118    13             Chrome      16990000    None\n",
-       "6  8159312408158297118    13             Chrome      16990000    None\n",
-       "7  8159312408158297118    13             Chrome      16990000    None\n",
-       "8  8159312408158297118    13             Chrome      16990000    None\n",
-       "9  8159312408158297118    13             Chrome      16990000    None"
+       "   hour            browser  isMobile        country  productPrice isClick\n",
+       "0    23  Internet Explorer     False  United States      25000000    None\n",
+       "1    23  Internet Explorer     False  United States      50000000    None\n",
+       "2    23  Internet Explorer     False  United States     100000000    None\n",
+       "3    23  Internet Explorer     False  United States     250000000    None\n",
+       "4    13             Chrome     False  United States      16990000    None"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,34 +729,198 @@
     "%%bigquery --project $PROJECT \n",
     "-- 使用する変数が入っている要素のみを抽出\n",
     "WITH data AS(\n",
-    "SELECT fullVisitorId, visitStartTime, hits, device \n",
+    "SELECT hits, device, geoNetwork\n",
     "FROM `bigquery-public-data.google_analytics_sample.ga_sessions_20160801` \n",
     "),\n",
     "data2 AS(\n",
-    "SELECT fullVisitorId, hit.hour, hit.product, device.browser  FROM data, UNNEST(hits) AS hit\n",
+    "SELECT hit.hour, hit.product, device.browser, device.isMobile, geoNetwork.country  FROM data, UNNEST(hits) AS hit\n",
     "),\n",
     "data3 AS(\n",
-    "-- TODO IF(product.isClick is null, False, True) AS isClick \n",
-    "SELECT fullVisitorId, hour, browser, product.productPrice, product.isClick FROM data2, UNNEST(product) AS product \n",
+    "SELECT hour, browser, isMobile, country, product.productPrice, product.isClick FROM data2, UNNEST(product) AS product \n",
     ")\n",
     "\n",
-    "SELECT  * FROM data3 LIMIT 10\n"
+    "SELECT  * FROM data3 LIMIT 5\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "いちいち上のクエリを叩くのも面倒なので、最初に作成したdatasetの中に保存します"
+    "いちいち上のクエリを叩くのも面倒なので、最初に作成したdatasetに新たなtableを作成し、そこに取得した結果を保存します"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "TODO "
+    "%%bigquery --project $PROJECT \n",
+    "CREATE  OR REPLACE TABLE google_analytics.ga_dataset AS\n",
+    "\n",
+    "-- 以下は上と同様のクエリ\n",
+    "WITH data AS(\n",
+    "SELECT hits, device, geoNetwork\n",
+    "FROM `bigquery-public-data.google_analytics_sample.ga_sessions_20160801` \n",
+    "),\n",
+    "data2 AS(\n",
+    "SELECT hit.hour, hit.product, device.browser, device.isMobile, geoNetwork.country  FROM data, UNNEST(hits) AS hit\n",
+    "),\n",
+    "data3 AS(\n",
+    "SELECT hour, browser, isMobile, country, product.productPrice, product.isClick FROM data2, UNNEST(product) AS product \n",
+    ")\n",
+    "\n",
+    "SELECT  * FROM data3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hour</th>\n",
+       "      <th>browser</th>\n",
+       "      <th>isMobile</th>\n",
+       "      <th>country</th>\n",
+       "      <th>productPrice</th>\n",
+       "      <th>isClick</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>20990000</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>990000</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Firefox</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>16990000</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Firefox</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>16990000</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>False</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>12990000</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   hour  browser  isMobile        country  productPrice isClick\n",
+       "0    13   Chrome     False  United States      20990000    None\n",
+       "1    13   Chrome     False  United States        990000    None\n",
+       "2     7  Firefox     False         Canada      16990000    None\n",
+       "3     7  Firefox     False         Canada      16990000    None\n",
+       "4    13   Chrome     False  United States      12990000    None"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery --project $PROJECT \n",
+    "-- 確認\n",
+    "SELECT * FROM `google_analytics.ga_dataset` LIMIT 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "一旦ここまでとして、次は学習に使用するdatasetの前処理と、特徴量生成を行います"
    ]
   }
  ],
