それぞれの記事をブラッシュアップ

--- a/article/bqml2.ipynb
+++ b/article/bqml2.ipynb
@@ -12,7 +12,12 @@
    "metadata": {},
    "source": [
     "# これなに?\n",
-    "BQMLを利用して、機械学習を行うために有用そうな方法をまとめた記事です。この記事の中では、きか"
+    "BQMLを利用して、機械学習を行うために有用そうな方法をまとめた記事です \n",
+    "この記事の中では  \n",
+    "- データセットの概観を確認し、探索的に分析\n",
+    "- 分析した結果から精度向上に役立ちそうな特徴量を生成します\n",
+    "\n",
+    "わりと長くなったので、BQML自体の説明は次の記事に回します"
    ]
   },
   {
@@ -1462,6 +1467,13 @@
    "metadata": {},
    "source": [
     "同じブラウザでも、携帯からのアクセスかどうかで異なるようなので、この2つも交差特徴量として入力します"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 機械学習に入力するデータセットを作成する"
    ]
   },
   {
