--- a/article/bqml_1.ipynb
+++ b/article/bqml_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO title"
+    "# BQML + jupyterで機械学習を行う(その1: データセットの作成)"
    ]
   },
   {
@@ -33,22 +33,34 @@
     "について説明します  \n",
     "\n",
     "特徴量生成、MLモデルの作成についてはまた別の記事にまとめます  \n",
-    "なお、jupyterや機械学習自体の説明については基本しないです"
+    "なお、jupyterや機械学習自体の説明については基本せず、また、pythonでの処理は行わずすべてSQLで分析していきます"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# big queryのメリット"
+    "# 機械学習でBigQueryを使用するメリット"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 大量のdataからでも高速に集約し、\n",
-    "TODO "
+    "機械学習でBQを使う際にメリットだと個人的に感じるのは、\n",
+    "\n",
+    "- 大量のログであっても容易にすばやくクレンジングや特徴量の作成が行える\n",
+    "- 一度作成したデータセットを簡単に保存しておける\n",
+    "- MLモデルを作る際にパラメータ調整やスケーリングなどの面倒な部分をよしなにやってくれる\n",
+    "\n",
+    "ところです  \n",
+    "さらにjupyter上でクエリを実行することで、\n",
+    "\n",
+    "- シームレスにbqに接続し、クエリを実行できる\n",
+    "- bqからの返り値を`pandas.DataFrame`として受け取ることで、sqlで表現できないような複雑な処理が可能\n",
+    "- 結果の可視化が可能\n",
+    "\n",
+    "などのメリットがあります"
    ]
   },
   {
@@ -582,6 +594,23 @@
    "source": [
     "で確認してみます  \n",
     "目的変数である`isClick` はかなり入れ込んでるので、少し面倒そうですね"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "   Last modified                             Schema                             Total Rows   Total Bytes   Expiration   Time Partitioning   Clustered Fields   Labels\n",
+    " ----------------- ----------------------------------------------------------- ------------ ------------- ------------ ------------------- ------------------ --------\n",
+    "  23 Oct 22:12:27   |- visitorId: integer                                       1711         19920125\n",
+    "                    |- visitNumber: integer\n",
+    "                    |- visitId: integer\n",
+    "                    |- visitStartTime: integer\n",
+    "                    |- date: string\n",
+    "                    +- totals: record\n",
+    " ...\n",
+    "```"
    ]
   },
   {
