1つ目の記事最終稿

--- a/article/bqml1.ipynb
+++ b/article/bqml1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BQML + jupyterで機械学習を行う(その1: データセットの作成)"
+    "# BigQuery + jupyterで機械学習を行う(その1: データセットの作成)"
    ]
   },
   {
@@ -57,8 +57,8 @@
     "さらにjupyter上でクエリを実行することで、\n",
     "\n",
     "- シームレスにbqに接続し、クエリを実行できる\n",
-    "- bqからの返り値を`pandas.DataFrame`として受け取ることで、sqlで表現できないような複雑な処理が可能\n",
-    "- 結果の可視化が可能\n",
+    "- bqからの返り値を`pandas.DataFrame`として受け取ることで、sqlで表現できないような複雑な処理や可視化が可能\n",
+    "- 実行結果をまとめて、そのままレポートにできる(この記事もjupyterで書きました)\n",
     "\n",
     "などのメリットがあります"
    ]
@@ -951,6 +951,34 @@
    "source": [
     "一旦ここまでとして、次は学習に使用するdatasetの前処理と、特徴量生成を行います"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 参考文献 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [スケーラブルデータサイエンス データエンジニアのための実践Google Cloud Platform](https://www.amazon.co.jp/%E3%82%B9%E3%82%B1%E3%83%BC%E3%83%A9%E3%83%96%E3%83%AB%E3%83%87%E3%83%BC%E3%82%BF%E3%82%B5%E3%82%A4%E3%82%A8%E3%83%B3%E3%82%B9-%E3%83%87%E3%83%BC%E3%82%BF%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%8B%E3%82%A2%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AE%E5%AE%9F%E8%B7%B5Google-Platform-Valliappa-Lakshmanan-ebook/dp/B07R39RLSQ/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%82%B9%E3%82%B1%E3%83%BC%E3%83%A9%E3%83%96%E3%83%AB+GCP&qid=1563756392&s=digital-text&sr=1-1)\n",
+    "    - bqのTech Leadである[Valliappa Lakshmanan](https://www.oreilly.com/pub/au/7304)さんの本。日本語版が最近出た\n",
+    "    \n",
+    "- [Google BigQuery: The Definitive Guide](https://www.amazon.com/Google-BigQuery-Definitive-Warehousing-Analytics/dp/1492044466)\n",
+    "    - 同じくValliappa Lakshmananさんの本。ただし、発売は来年\n",
+    "\n",
+    "- [ビッグデータ分析・活用のためのSQLレシピ](https://www.amazon.co.jp/%E3%83%93%E3%83%83%E3%82%B0%E3%83%87%E3%83%BC%E3%82%BF%E5%88%86%E6%9E%90%E3%83%BB%E6%B4%BB%E7%94%A8%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AESQL%E3%83%AC%E3%82%B7%E3%83%94-%E5%8A%A0%E5%B5%9C-%E9%95%B7%E9%96%80/dp/4839961263/ref=sr_1_4?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=sql&qid=1563756274&s=books&sr=1-4)\n",
+    "    - ここまでできるのかというレベルにSQLの黒魔術がいろいろのってます"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
