学習までまとめた

--- a/article/bqml3.ipynb
+++ b/article/bqml3.ipynb
@@ -11,20 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## これなに\n",
+    "## これなに?\n",
     "TODO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +50,19 @@
    "metadata": {},
    "source": [
     "# BQMLの使いどころ\n",
-    "- "
+    "- 大量のデータセットから、素早く学習、予測を行いたい場合\n",
+    "    - アルゴリズムによりますが数千万レコードのデータセットでも数分で学習が実行できます\n",
+    "- 素早く機械学習システムをプロダクトに導入したい場合\n",
+    "    - 機械学習が実行でき、かつクエリを定期実行することも可能なので、極端に高い精度が求められなければ、低コストで機械学習システムを導入できます\n",
+    "- とりあえず、機械学習を試してみたい場合\n",
+    "    - 上記に似てますが、SQLで完結するのと、パラメータのチューニングや必要最低限の前処理などはよしなにやってくれるので、あまり機械学習に触れたことがない人でも簡単に試せます"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# アルゴリズム一覧(2019/7時点)\n",
+    "# アルゴリズム一覧(2019/7月時点)\n",
     "## 普通に使える\n",
     "- linear_reg\n",
     "\t- 線形回帰\n",
@@ -107,7 +105,7 @@
     "- `ML.BUCKETIZE`\n",
     "    - 連続値を任意のしきい値で分けて、カテゴリにできます\n",
     "\n",
-    "作成すると以下のようになります。具体的な使い方は[前記事](https://qiita.com/hiroaki_hase/items/5fcc9f056d44105d186e#%E3%82%88%E3%82%8A%E3%82%88%E3%81%84%E7%89%B9%E5%BE%B4%E9%87%8F%E3%82%92%E6%8E%A2%E7%B4%A2)を参考にしてください"
+    "作成した結果の特徴量は以下のようになります。具体的な使い方は[前記事](https://qiita.com/hiroaki_hase/items/5fcc9f056d44105d186e#%E3%82%88%E3%82%8A%E3%82%88%E3%81%84%E7%89%B9%E5%BE%B4%E9%87%8F%E3%82%92%E6%8E%A2%E7%B4%A2)を参考にしてください"
    ]
   },
   {
@@ -198,9 +196,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# モデルの構築\n",
-    "TODO"
+    "# モデルの構築(`CREATE MODEL`)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "モデルを構築してみます。作り方は`CREATE TABLE`によく似ています  \n",
+    "今回は分類問題をときたいので、アルゴリズムはロジスティク回帰(`logistic_reg`)で行います  \n",
+    "モデルに入力する特徴量が順序特徴量として使われるか、カテゴリ特徴量として使われるかはカラムで定義されている型によって決定し、`INT64`、`FLOAT64`等の場合は数値として入力され、`STRING`、`TIMESTAMP`等の場合は、カテゴリ型として、自動でone-hot encodingされた後、入力されます"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%bigquery  --project $PROJECT \n",
+    "CREATE MODEL google_analytics.ga_model_log   \n",
+    "OPTIONS(\n",
+    "    INPUT_LABEL_COLS=['isClick'], \n",
+    "    MODEL_TYPE='logistic_reg'\n",
+    "    )\n",
+    "AS \n",
+    "SELECT * FROM `google_analytics.ga_dataset_feature` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`INPUT_LABEL_COLS`には正解ラベルとなるカラム名を、`MODEL_TYPE`には使用するアルゴリズムを入力します  \n",
+    "その他のパラメータを指定しないと、l2正則化や学習率などのハイパーパラメータや、trainデータとセットtestデータセットの分割方法などは自動で行われますが、指定したい場合はオプションで設定できます([詳細はドキュメント参照](https://cloud.google.com/bigquery-ml/docs/reference/standard-sql/bigqueryml-syntax-create?hl=ja))   \n",
+    "\n",
+    "`ga_model_log`という名前でモデルが生成されました。なお、モデルを修正したり消去したいときは、table作成と同じように`REPLACE MODEL`や`DROP MODEL`で行えます"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# モデルの評価(`ML.EVALUATE`、`ML.ML.ROC_CURVE`、`ML.CONFUSION_MATRIX`)\n",
+    "\n",
+    "作成したモデルの性能を確認するための関数です。本来ならば、BQコンソール上からGUIで確認したほうがきれいに可視化されており、非常にわかりやすいのですが、今回jupyterで完結させるため、はあえてクエリを実行して確認します"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ML.EVALUATE\n",
+    "基本的なモデルの性能の評価値を確認します。どのアルゴリズムで作成したモデルでも実行可能です"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -208,13 +303,6 @@
    "source": [
     "# 使用した特徴量の確認\n",
     "TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# モデルの評価値の確認"
    ]
   },
   {
@@ -244,6 +332,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- [BQML公式ドキュメント](https://cloud.google.com/bigquery-ml/docs/reference/?hl=ja)\n",
+    "\n",
     "- [スケーラブルデータサイエンス データエンジニアのための実践Google Cloud Platform](https://www.amazon.co.jp/%E3%82%B9%E3%82%B1%E3%83%BC%E3%83%A9%E3%83%96%E3%83%AB%E3%83%87%E3%83%BC%E3%82%BF%E3%82%B5%E3%82%A4%E3%82%A8%E3%83%B3%E3%82%B9-%E3%83%87%E3%83%BC%E3%82%BF%E3%82%A8%E3%83%B3%E3%82%B8%E3%83%8B%E3%82%A2%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AE%E5%AE%9F%E8%B7%B5Google-Platform-Valliappa-Lakshmanan-ebook/dp/B07R39RLSQ/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%82%B9%E3%82%B1%E3%83%BC%E3%83%A9%E3%83%96%E3%83%AB+GCP&qid=1563756392&s=digital-text&sr=1-1)\n",
     "    - bqのTech Leadである[Valliappa Lakshmanan](https://www.oreilly.com/pub/au/7304)さんの本。日本語版が最近出た\n",
     "    \n",
@@ -251,8 +341,15 @@
     "    - 同じくValliappa Lakshmananさんの本。ただし、発売は来年\n",
     "\n",
     "- [ビッグデータ分析・活用のためのSQLレシピ](https://www.amazon.co.jp/%E3%83%93%E3%83%83%E3%82%B0%E3%83%87%E3%83%BC%E3%82%BF%E5%88%86%E6%9E%90%E3%83%BB%E6%B4%BB%E7%94%A8%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AESQL%E3%83%AC%E3%82%B7%E3%83%94-%E5%8A%A0%E5%B5%9C-%E9%95%B7%E9%96%80/dp/4839961263/ref=sr_1_4?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=sql&qid=1563756274&s=books&sr=1-4)\n",
-    "    - ここまでできるのかというレベルにSQLの黒魔術がいろいろのってます"
+    "    - ここまでやるかレベルのSQLの黒魔術がいろいろのってます"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
